# Workflow-Engine

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
adilo/: manage.py
adilo/adilo/: asgi.py  settings.py  urls.py  wsgi.py
adilo/hire/: admin.py  flows.py  serializers.py  urls.py
adilo/hire/migrations/: 0001_initial.py
adilo/hire/models/: __init__.py  hire_process.py  hire_task.py  user.py
adilo/viewflow_restapi/: __init__.py  activations.py  edges.py  fields.py  flows.py  mixins.py  models.py  nodes.py  rest_extensions.py  signals.py  views.py
